--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "webpack",
-    "test": "node ./test/testPreOrderTraversal.js"
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -26,11 +26,14 @@
   },
   "homepage": "https://github.com/warfrogsdf/algorithm#readme",
   "devDependencies": {
-    "jest": "^22.1.4",
-    "webpack": "^3.10.0",
     "babel-cli": "^6.9.0",
+    "babel-core": "^6.26.0",
+    "babel-jest": "^22.1.0",
     "babel-loader": "^7.0.0",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-es2015": "^6.9.0"
+    "babel-preset-es2015": "^6.9.0",
+    "jest": "^22.1.4",
+    "regenerator-runtime": "^0.11.1",
+    "webpack": "^3.10.0"
   }
 }
